fixed layout problems in edit mode

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -12,9 +12,9 @@ html body {
 
 html body .container-fluid.body-content {
   position: absolute;
-  top: 70px;
+  top: 50px;
   bottom: 30px;
-  padding: 15px;
+  padding: 10px;
   right: 0;
   left: 0;
   overflow-y: auto;
@@ -36,7 +36,7 @@ footer {
   right: 0;
   bottom: 0;
   background-color: #4C4;
-  height: 100px;
+  height: 60px;
 }
 
 .deleted-row {
